User stories 1 to 11 completed

--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-       <h1 id="title"> 
-        freeCodeCamp Survey Form
-       </h1>
-       <p id="description">
+      <h1 id="title">freeCodeCamp Survey Form</h1>
+      <p id="description">
         Thank you for taking the time to help us improve the platform
-       </p>
+      </p>
+      <form action="" id="survey-form">
+        <div>
+          <label id="name-label" for="name">Name</label>
+          <input type="text" id="name" required placeholder="Enter your name" />
+        </div>
+        <div>
+          <label id="email-label" for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            required
+            placeholder="Enter your email"
+          />
+        </div>
+        <div>
+          <label id="number-label" for="number">Number</label>
+          <input
+            type="number"
+            id="number"
+            min="0"
+            max="99"
+            required
+            placeholder="Enter a number"
+          />
+        </div>
+      </form>
     </div>
-</body>
+  </body>
 </html>
