user stories 12 and 13

--- a/index.html
+++ b/index.html
@@ -37,6 +37,38 @@
             placeholder="Enter a number"
           />
         </div>
+        <div>
+        <label id="select-label" for="select">Select</label>
+        <select id="select" name="select">
+            <option>
+                option 1
+            </option>
+            <option>
+                option 2
+            </option>
+            <option>
+                option 3
+            </option>
+        </select>
+        </div>
+        <div>
+          <div>
+            <input id="radio-1" name="radio-select" type="radio"/>
+            <label id="radio-1-label" for="radio">Radio 1</label>
+          </div>
+          <div>
+            <input id="radio-2" name="radio-select" type="radio"/>
+            <label id="radio-2-label" for="radio">Radio 2</label>
+          </div>
+          <div>
+            <input id="radio-3" name="radio-select" type="radio"/>
+            <label id="radio-3-label" for="radio">Radio 3</label>
+          </div>
+          <div>
+            <input id="radio-4" name="radio-select" type="radio"/>
+            <label id="radio-4-label" for="radio">Radio 4</label>
+          </div>
+        </div>
       </form>
     </div>
   </body>
